--- a/policies/operators/kustomization.yaml
+++ b/policies/operators/kustomization.yaml
@@ -3,11 +3,11 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-  - acm/
+  # - acm/
   # - acs/
   # - cluster-observability/
   # - compliance/
-  # - data-foundation/
+  - data-foundation/
   # - file-integrity/
   # - nmstate/
   # - openshift-virtualization/
