added nmstate operator policy

--- a/policies/operators/kustomization.yaml
+++ b/policies/operators/kustomization.yaml
@@ -6,9 +6,9 @@ resources:
   # - acm/
   # - acs/
   # - cluster-observability/
-  - compliance/
+  # - compliance/
   # - data-foundation/
   # - file-integrity/
-  # - nmstate/
+  - nmstate/
   # - openshift-virtualization/
   # - talm/
