--- a/policies/operators/kustomization.yaml
+++ b/policies/operators/kustomization.yaml
@@ -5,8 +5,8 @@ kind: Kustomization
 resources:
   # - acm/
   # - acs/
-  - cluster-logging/
-  # - cluster-observability/
+  # - cluster-logging/
+  - cluster-observability/
   # - compliance/
   # - data-foundation/
   # - file-integrity/
