--- a/policies/operators/kustomization.yaml
+++ b/policies/operators/kustomization.yaml
@@ -11,7 +11,8 @@ resources:
   # - data-foundation/
   # - file-integrity/
   # - local-storage
-  - lvm-storage
+  # - lvm-storage
+  - metallb/
   # - nmstate/
   # - openshift-virtualization/
   # - talm/
