Refactor oauth & ldap group sync

--- a/policies/cluster-configs/ldap-sync/cm-ldap-group-syncer.yaml
+++ b/policies/cluster-configs/ldap-sync/cm-ldap-group-syncer.yaml
@@ -8,7 +8,7 @@ data:
   sync.yaml: |
     kind: LDAPSyncConfig
     apiVersion: v1
-    url: {{ fromConfigMap "openshift-config" "ldap-config" "ldapAddress" }}
+    url: {{ fromConfigMap "openshift-config" "ldap-config" "ldapUrl" }}
     insecure: true
     bindDN: {{ fromConfigMap "openshift-config" "ldap-config" "bindDN" }}
     bindPassword:
