--- a/policies/cluster-configs/ldap-sync/ldap-bind-password.yaml
+++ b/policies/cluster-configs/ldap-sync/ldap-bind-password.yaml
@@ -6,4 +6,4 @@ metadata:
   namespace: ldap-sync
 type: Opaque
 data:
-  bindPassword: '{{ fromSecret "openshift-config" "ldap-secret" "bindPassword" }}'
+  bindPassword: '{{ fromSecret "openshift-config" "ldap-bind-password" "bindPassword" }}'
