--- a/policies/cluster-configs/oauth/ldap-bind-password.yaml
+++ b/policies/cluster-configs/oauth/ldap-bind-password.yaml
@@ -1,6 +1,8 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: mysecret
+  name: ldap-bind-password
   namespace: openshift-config
 type: Opaque
+stringData:
+  bindPassword: CHANGE_ME
